Adicionando a barra de navegação e algumas ferramentas pertinentes à ela (ainda inclimpleto).

--- a/styles/css/Navbar.module.css
+++ b/styles/css/Navbar.module.css
@@ -1,3 +1,286 @@
+@import url("https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap");
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0 10px 100px;
+}
+@media (max-width: 600px) {
+  .logo {
+    margin: 10px 0 10px 15px;
+  }
+}
+.logo p {
+  font-family: "Edu TAS Beginner", cursive;
+  font-size: 1.4rem;
+  text-shadow: 0px 0px 5px;
+}
+@media (max-width: 600px) {
+  .logo p {
+    font-size: 1rem;
+  }
+}
+.logo .function {
+  color: rgb(0, 170, 0);
+}
+.logo .name {
+  color: rgb(0, 100, 200);
+}
+.logo .name span {
+  color: rgb(100, 100, 100);
+}
 
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid black;
+  background-color: rgb(240, 240, 240);
+}
+.navbar button {
+  border: 0px solid transparent;
+  background-color: transparent;
+  cursor: pointer;
+}
+.navbar svg {
+  height: 30px;
+  width: 30px;
+}
+@media (max-width: 300px) {
+  .navbar svg {
+    width: 15px;
+    height: 15px;
+  }
+}
+.navbar ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.navbar ul li {
+  padding: 0 20px 0 20px;
+}
+.navbar ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.2rem;
+}
+.navbar ul li .ativo {
+  border-bottom: 2px solid rgb(0, 100, 200);
+  letter-spacing: 4px;
+  animation: aparecer 0.5s 1;
+}
+.navbar .menuButton .menuClose {
+  transition: transform 0.5s ease, color 0.5s ease;
+}
+.navbar .menuButton .menuOpen {
+  transform: rotate(90deg);
+  color: rgb(0, 100, 200);
+  transition: transform 0.5s ease, color 0.5s ease;
+}
+.navbar .menu {
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  background-color: rgb(240, 240, 240);
+  border-radius: 15px;
+  border: 2px solid black;
+  animation: fade-in 0.5s ease-in-out;
+}
+@media (max-width: 300px) {
+  .navbar .menu {
+    left: 10px;
+  }
+}
+.navbar .menu ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 10px 0 0;
+}
+.navbar .menu ul li {
+  padding-bottom: 20px;
+}
+@media (max-width: 300px) {
+  .navbar .menu ul li {
+    padding-left: 10px;
+    padding-right: 0;
+  }
+}
+@media (max-width: 600px) {
+  .navbar .menu ul li a {
+    font-size: 0.7rem;
+  }
+}
+.navbar .menu ul li .ativo {
+  letter-spacing: 4px;
+  text-shadow: 0px 0px 5px;
+  border-bottom: 2px solid rgb(0, 100, 200);
+}
+
+@keyframes aparecer {
+  0% {
+    letter-spacing: 2px;
+  }
+  100% {
+    letter-spacing: 4px;
+  }
+}
+.settings {
+  margin-right: 100px;
+}
+@media (max-width: 600px) {
+  .settings {
+    margin-right: 15px;
+  }
+}
+.settings .settingsClose {
+  transition: transform 1s ease, color 1s ease;
+}
+.settings .settingsOpen {
+  transform: rotate(180deg);
+  color: rgb(0, 100, 200);
+  transition: transform 1s ease, color 1s ease;
+}
+
+.settingsMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 90px;
+  right: 50px;
+  background-color: rgb(240, 240, 240);
+  border-radius: 15px;
+  padding: 20px 20px 0 20px;
+  border: 2px solid black;
+  animation: fade-in 0.5s ease-in-out;
+}
+@media (max-width: 300px) {
+  .settingsMenu {
+    left: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .settingsMenu {
+    right: 15px;
+  }
+}
+.settingsMenu .titulo {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+@media (max-width: 600px) {
+  .settingsMenu .titulo {
+    font-size: 1rem;
+  }
+}
+.settingsMenu ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+}
+.settingsMenu ul li {
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 300px) {
+  .settingsMenu ul li {
+    padding-left: 10px;
+    padding-right: 0;
+  }
+}
+@media (max-width: 600px) {
+  .settingsMenu ul li p {
+    font-size: 0.7rem;
+  }
+}
+.settingsMenu ul li label {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.settingsMenu ul li label input {
+  display: none;
+}
+.settingsMenu ul li label .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+.settingsMenu ul li label .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+.settingsMenu ul li label input:checked + .slider {
+  background-color: #2196F3;
+}
+.settingsMenu ul li label input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.settingsMenu ul li .lang {
+  width: 100px;
+  height: 40px;
+}
+.settingsMenu ul li .lang .slider:before {
+  width: 46px;
+  height: 32px;
+  border-radius: 34px;
+  background-image: url("/images/brasil.png");
+  background-size: 47px 47px;
+  background-position-y: -5px;
+}
+.settingsMenu ul li .lang input:checked + .slider {
+  background-color: #ccc;
+}
+.settingsMenu ul li .lang input:checked + .slider:before {
+  -webkit-transform: translateX(46px);
+  -ms-transform: translateX(46px);
+  transform: translateX(46px);
+  background-image: url("/images/eua.png");
+  background-size: 47px 47px;
+  background-position-y: -5px;
+}
+
+@keyframes fade-in {
+  from {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 /*# sourceMappingURL=Navbar.module.css.map */
