--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -1,2 +1,196 @@
-.navbar
+@use 'variables'
+@use 'mixins'
+
     
+.logo
+    @include mixins.align-center(column)
+    margin: 10px 0 10px 100px
+    @include mixins.responsivo-600
+        margin: 10px 0 10px 15px
+    p
+        font-family: variables.$font
+        font-size: 1.4rem
+        text-shadow: 0px 0px 5px
+        @include mixins.responsivo-600
+            font-size: 1rem
+    .function
+        color: variables.$green-color
+    .name
+        color: variables.$blue-color
+        span
+            color: variables.$gray-color
+
+.navbar
+    @include mixins.align-center(row)
+    justify-content: space-between
+    border-bottom: 2px solid black
+    background-color: variables.$nav-color
+    button
+        border: 0px solid transparent
+        background-color: transparent
+        cursor: pointer
+    svg
+        height: 30px
+        width: 30px
+        @include mixins.responsivo-300
+            width: 15px
+            height: 15px
+    ul
+        @include mixins.align-center(row)
+        list-style: none
+        li
+            padding: 0 20px 0 20px
+            a
+                text-decoration: none
+                color: black
+                font-size: 1.2rem
+            .ativo
+                border-bottom: 2px solid variables.$blue-color
+                letter-spacing: 4px
+                animation: aparecer 0.5s 1
+    .menuButton
+        .menuClose
+            transition: transform 0.5s ease, color 0.5s ease
+        .menuOpen
+            transform: rotate(90deg)
+            color: variables.$blue-color
+            transition: transform 0.5s ease, color 0.5s ease
+    .menu
+        position: absolute
+        top: 90px
+        left: 50%
+        background-color: variables.$nav-color
+        border-radius: 15px
+        border: 2px solid black
+        animation: fade-in 0.5s ease-in-out
+        @include mixins.responsivo-300
+            left: 10px
+        ul
+            @include mixins.align-center(column)
+            padding: 20px 10px 0 0
+            li
+                padding-bottom: 20px
+                @include mixins.responsivo-300
+                    padding-left: 10px
+                    padding-right: 0
+                a
+                    @include mixins.responsivo-600
+                        font-size: 0.7rem
+                .ativo
+                    letter-spacing: 4px
+                    text-shadow: 0px 0px 5px
+                    border-bottom: 2px solid variables.$blue-color
+                    
+@keyframes aparecer
+    0%
+        letter-spacing: 2px
+    100%
+        letter-spacing: 4px
+
+.settings
+    margin-right: 100px
+    @include mixins.responsivo-600
+        margin-right: 15px
+    .settingsClose
+        transition: transform 1s ease, color 1s ease
+    .settingsOpen
+        transform: rotate(180deg)
+        color: variables.$blue-color
+        transition: transform 1s ease, color 1s ease
+    
+.settingsMenu
+    @include mixins.align-center(column)
+    position: absolute
+    top: 90px
+    right: 50px
+    background-color: variables.$nav-color
+    border-radius: 15px
+    padding: 20px 20px 0 20px
+    border: 2px solid black
+    animation: fade-in 0.5s ease-in-out
+    @include mixins.responsivo-300
+        left: 10px
+    @include mixins.responsivo-600
+        right: 15px
+    .titulo
+        font-size: 1.2rem
+        font-weight: 600
+        @include mixins.responsivo-600
+            font-size: 1rem
+    ul
+        @include mixins.align-center(column)
+        padding-top: 20px
+        li
+            padding-bottom: 20px
+            @include mixins.align-center(row)
+            @include mixins.responsivo-300
+                padding-left: 10px
+                padding-right: 0
+            p
+                @include mixins.responsivo-600
+                    font-size: 0.7rem
+            label
+                position: relative
+                display: inline-block
+                width: 60px
+                height: 34px
+                input
+                    display: none
+                .slider
+                    position: absolute
+                    cursor: pointer
+                    top: 0
+                    left: 0
+                    right: 0
+                    bottom: 0
+                    background-color: #ccc
+                    -webkit-transition: .4s
+                    transition: .4s
+                    border-radius: 34px
+                    &:before
+                        position: absolute
+                        content: ""
+                        height: 26px
+                        width: 26px
+                        left: 4px
+                        bottom: 4px
+                        background-color: white
+                        -webkit-transition: .4s
+                        transition: .4s
+                        border-radius: 50%
+                input
+                    &:checked + .slider
+                        background-color: #2196F3
+                    &:checked + .slider:before
+                        -webkit-transform: translateX(26px)
+                        -ms-transform: translateX(26px)
+                        transform: translateX(26px)
+            .lang
+                width: 100px
+                height: 40px
+                .slider
+                    &:before
+                        width: 46px
+                        height: 32px
+                        border-radius: 34px
+                        background-image: url('/images/brasil.png')
+                        background-size: 47px 47px
+                        background-position-y: -5px
+                input
+                    &:checked + .slider
+                        background-color: #ccc
+                    &:checked + .slider:before
+                        -webkit-transform: translateX(46px)
+                        -ms-transform: translateX(46px)
+                        transform: translateX(46px)
+                        background-image: url('/images/eua.png')
+                        background-size: 47px 47px
+                        background-position-y: -5px
+
+@keyframes fade-in
+    from
+        transform: translateY(-100px)
+        opacity: 0
+    to
+        transform: translateY(0)
+        opacity: 1
