--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -48,6 +48,11 @@
                 border-bottom: 2px solid variables.$blue-color
                 letter-spacing: 4px
                 animation: aparecer 0.5s 1
+            .inativo
+                &:hover
+                    color: variables.$green-color
+        .lista_inativo:hover
+            transform: translateY(-3px)
     .menuButton
         .menuClose
             transition: transform 0.5s ease, color 0.5s ease
