Adicionando a estrutura do footer da página.

--- a/styles/css/Footer.module.css
+++ b/styles/css/Footer.module.css
@@ -1,3 +1,9 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap");
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 /*# sourceMappingURL=Footer.module.css.map */
