--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -72,11 +72,10 @@
             left: 10px
         ul
             @include mixins.align-center(column)
-            padding: 20px 10px 0 0
+            padding: 20px 20px 0 20px
             li
                 padding-bottom: 20px
                 @include mixins.responsivo-300
-                    padding-left: 10px
                     padding-right: 0
                 a
                     @include mixins.responsivo-600
