--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -5,3 +5,4 @@ $blue-color: rgb(0, 100, 200)
 $green-color: rgb(0, 170, 0)
 $gray-color: rgb(100, 100, 100)
 $nav-color: rgb(240, 240, 240)
+$contato-color: rgb(255, 255, 255)
