--- a/styles/css/Navbar.module.css
+++ b/styles/css/Navbar.module.css
@@ -39,6 +39,9 @@
   justify-content: space-between;
   border-bottom: 2px solid black;
   background-color: rgb(240, 240, 240);
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
 .navbar button {
   border: 0px solid transparent;
@@ -49,7 +52,7 @@
   height: 30px;
   width: 30px;
 }
-@media (max-width: 300px) {
+@media (max-width: 350px) {
   .navbar svg {
     width: 15px;
     height: 15px;
@@ -61,9 +64,11 @@
   justify-content: center;
   align-items: center;
   list-style: none;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 .navbar ul li {
-  padding: 0 20px 0 20px;
+  padding: 10px 25px 10px 25px;
 }
 .navbar ul li a {
   text-decoration: none;
@@ -90,15 +95,16 @@
   transition: transform 0.5s ease, color 0.5s ease;
 }
 .navbar .menu {
-  position: absolute;
   top: 90px;
   left: 50%;
   background-color: rgb(240, 240, 240);
   border-radius: 15px;
   border: 2px solid black;
   animation: fade-in 0.5s ease-in-out;
+  z-index: 10;
+  position: absolute;
 }
-@media (max-width: 300px) {
+@media (max-width: 350px) {
   .navbar .menu {
     left: 10px;
   }
@@ -108,15 +114,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 20px 0 20px;
-}
-.navbar .menu ul li {
-  padding-bottom: 20px;
-}
-@media (max-width: 300px) {
-  .navbar .menu ul li {
-    padding-right: 0;
-  }
 }
 @media (max-width: 600px) {
   .navbar .menu ul li a {
@@ -167,8 +164,9 @@
   padding: 20px 20px 0 20px;
   border: 2px solid black;
   animation: fade-in 0.5s ease-in-out;
+  z-index: 10;
 }
-@media (max-width: 300px) {
+@media (max-width: 350px) {
   .settingsMenu {
     left: 10px;
   }
@@ -201,7 +199,7 @@
   justify-content: center;
   align-items: center;
 }
-@media (max-width: 300px) {
+@media (max-width: 350px) {
   .settingsMenu ul li {
     padding-left: 10px;
     padding-right: 0;
