--- a/styles/sass/Footer.module.sass
+++ b/styles/sass/Footer.module.sass
@@ -3,3 +3,6 @@
     
 .footer
     @include mixins.align-center(column)
+    text-align: center
+    padding: 0 20px 0 20px
+    background-color: variables.$contato-color
