--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -25,6 +25,9 @@
     justify-content: space-between
     border-bottom: 2px solid black
     background-color: variables.$nav-color
+    position: fixed
+    width: 100%
+    z-index: 10
     button
         border: 0px solid transparent
         background-color: transparent
@@ -32,14 +35,16 @@
     svg
         height: 30px
         width: 30px
-        @include mixins.responsivo-300
+        @include mixins.responsivo-350
             width: 15px
             height: 15px
     ul
         @include mixins.align-center(row)
         list-style: none
+        padding-bottom: 15px
+        padding-top: 15px
         li
-            padding: 0 20px 0 20px
+            padding: 10px 25px 10px 25px
             a
                 text-decoration: none
                 color: black
@@ -61,22 +66,19 @@
             color: variables.$blue-color
             transition: transform 0.5s ease, color 0.5s ease
     .menu
-        position: absolute
         top: 90px
         left: 50%
         background-color: variables.$nav-color
         border-radius: 15px
         border: 2px solid black
         animation: fade-in 0.5s ease-in-out
-        @include mixins.responsivo-300
+        z-index: 10
+        position: absolute
+        @include mixins.responsivo-350
             left: 10px
         ul
             @include mixins.align-center(column)
-            padding: 20px 20px 0 20px
             li
-                padding-bottom: 20px
-                @include mixins.responsivo-300
-                    padding-right: 0
                 a
                     @include mixins.responsivo-600
                         font-size: 0.7rem
@@ -112,7 +114,8 @@
     padding: 20px 20px 0 20px
     border: 2px solid black
     animation: fade-in 0.5s ease-in-out
-    @include mixins.responsivo-300
+    z-index: 10
+    @include mixins.responsivo-350
         left: 10px
     @include mixins.responsivo-600
         right: 15px
@@ -127,7 +130,7 @@
         li
             padding-bottom: 20px
             @include mixins.align-center(row)
-            @include mixins.responsivo-300
+            @include mixins.responsivo-350
                 padding-left: 10px
                 padding-right: 0
             p
