--- a/styles/css/ContateMe.module.css
+++ b/styles/css/ContateMe.module.css
@@ -56,6 +56,7 @@
   border: 1px solid black;
   outline: none;
   z-index: 2;
+  font-size: 1rem;
 }
 .contato .main form .inputBox input {
   height: 25px;
@@ -72,7 +73,7 @@
   transition: 0.5s;
   padding-bottom: 0;
   font-size: 0.86rem;
-  color: black;
+  color: gray;
   z-index: 1;
 }
 .contato .main form .inputBox input:focus ~ label, .contato .main form .inputBox textarea:focus ~ label, .contato .main form .inputBox input:valid ~ label, .contato .main form .inputBox textarea:valid ~ label {
@@ -89,6 +90,7 @@
   background-color: rgb(0, 100, 200);
   color: white;
   cursor: pointer;
+  font-size: 1rem;
 }
 .contato .main form button:hover {
   letter-spacing: 3px;
