--- a/styles/sass/ContateMe.module.sass
+++ b/styles/sass/ContateMe.module.sass
@@ -46,6 +46,7 @@
                     border: 1px solid black
                     outline: none
                     z-index: 2
+                    font-size: 1rem
                 input
                     height: 25px
                 textarea
@@ -59,7 +60,7 @@
                     transition: .5s
                     padding-bottom: 0
                     font-size: 0.86rem
-                    color: black
+                    color: gray
                     z-index: 1
                 input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label
                     font-size: 0.8rem
@@ -74,6 +75,7 @@
                 background-color: variables.$blue-color
                 color: white
                 cursor: pointer
+                font-size: 1rem
                 &:hover
                     letter-spacing: 3px
                     text-shadow: 0px 0px 4px
