--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -6,3 +6,4 @@ $green-color: rgb(0, 170, 0)
 $gray-color: rgb(100, 100, 100)
 $nav-color: rgb(240, 240, 240)
 $contato-color: rgb(255, 255, 255)
+$errorMessage-color: rgb(255, 255, 255)
