Adicionando as mensagens de 'email (não) enviado.

--- a/styles/css/ContateMe.module.css
+++ b/styles/css/ContateMe.module.css
@@ -144,4 +144,87 @@
   color: blue;
 }
 
+.mainPoupUp {
+  overflow: hidden;
+}
+
+.mainPoupUp {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+.mainPoupUp .poupUpEmail {
+  background-color: rgb(240, 240, 240);
+  width: 90%;
+  height: 250px;
+  max-width: 550px;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.mainPoupUp .poupUpEmail p {
+  font-size: 1.5rem;
+}
+.mainPoupUp .poupUpEmail button {
+  margin-top: 25px;
+  height: 40px;
+  width: 100px;
+  border-radius: 10px;
+  border: 0px solid transparent;
+  background-color: rgb(0, 170, 0);
+  color: white;
+  font-weight: 500;
+  font-size: 1rem;
+}
+.mainPoupUp .poupUpEmail button:hover {
+  letter-spacing: 3px;
+  text-shadow: 0px 0px 5px black;
+  cursor: pointer;
+}
+.mainPoupUp .poupUpEmail .loadingBar {
+  margin-top: 25px;
+  height: 15px;
+  width: 70%;
+  border: 1px solid black;
+  border-radius: 20px;
+  display: flex;
+  justify-content: left;
+}
+.mainPoupUp .poupUpEmail .loadingBar::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  background-color: rgb(0, 150, 0);
+  animation: loading 3s 1;
+}
+
+@keyframes loading {
+  0% {
+    width: 0;
+  }
+  25% {
+    width: 15%;
+  }
+  60% {
+    width: 50%;
+  }
+  70% {
+    width: 75%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=ContateMe.module.css.map */
