Deixando o formulário de contato também na versão en.

--- a/styles/sass/ContateMe.module.sass
+++ b/styles/sass/ContateMe.module.sass
@@ -140,6 +140,8 @@
         @include mixins.align-center(column)
         p
             font-size: 1.5rem
+            margin-left: 20px
+            margin-right: 20px
         button
             margin-top: 25px
             height: 40px
