--- a/styles/css/ContateMe.module.css
+++ b/styles/css/ContateMe.module.css
@@ -174,6 +174,8 @@
 }
 .mainPoupUp .poupUpEmail p {
   font-size: 1.5rem;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 .mainPoupUp .poupUpEmail button {
   margin-top: 25px;
