--- a/styles/css/Navbar.module.css
+++ b/styles/css/Navbar.module.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 10px 0 10px 100px;
 }
 @media (max-width: 600px) {
   .logo {
@@ -36,7 +35,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  justify-content: space-between;
   border-bottom: 2px solid black;
   background-color: rgb(240, 240, 240);
   position: fixed;
@@ -64,24 +62,27 @@
   justify-content: center;
   align-items: center;
   list-style: none;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding-left: 50px;
 }
 .navbar ul li {
   padding: 10px 25px 10px 25px;
 }
+.navbar ul li svg {
+  height: 30px;
+  width: 30px;
+}
 .navbar ul li a {
   text-decoration: none;
   color: black;
-  font-size: 1.2rem;
 }
 .navbar ul li .ativo {
-  border-bottom: 2px solid rgb(0, 100, 200);
-  letter-spacing: 4px;
-  animation: aparecer 0.5s 1;
+  color: red;
+}
+.navbar ul li .ativo svg {
+  animation: rotate 0.5s 1;
 }
 .navbar ul li .inativo:hover {
-  color: rgb(0, 170, 0);
+  color: rgb(0, 100, 200);
 }
 .navbar ul .lista_inativo:hover {
   transform: translateY(-3px);
@@ -120,22 +121,14 @@
     font-size: 0.7rem;
   }
 }
-.navbar .menu ul li .ativo {
-  letter-spacing: 4px;
-  text-shadow: 0px 0px 5px;
-  border-bottom: 2px solid rgb(0, 100, 200);
-}
 
-@keyframes aparecer {
+@keyframes rotate {
   0% {
-    letter-spacing: 2px;
+    transform: rotate(0);
   }
   100% {
-    letter-spacing: 4px;
+    transform: rotate(360deg);
   }
-}
-.settings {
-  margin-right: 100px;
 }
 @media (max-width: 600px) {
   .settings {
