--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -4,7 +4,6 @@
     
 .logo
     @include mixins.align-center(column)
-    margin: 10px 0 10px 100px
     @include mixins.responsivo-600
         margin: 10px 0 10px 15px
     p
@@ -22,7 +21,6 @@
 
 .navbar
     @include mixins.align-center(row)
-    justify-content: space-between
     border-bottom: 2px solid black
     background-color: variables.$nav-color
     position: fixed
@@ -41,21 +39,22 @@
     ul
         @include mixins.align-center(row)
         list-style: none
-        padding-bottom: 15px
-        padding-top: 15px
+        padding-left: 50px
         li
             padding: 10px 25px 10px 25px
+            svg
+                height: 30px
+                width: 30px
             a
                 text-decoration: none
                 color: black
-                font-size: 1.2rem
             .ativo
-                border-bottom: 2px solid variables.$blue-color
-                letter-spacing: 4px
-                animation: aparecer 0.5s 1
+                color: red
+                svg
+                    animation: rotate 0.5s 1
             .inativo
                 &:hover
-                    color: variables.$green-color
+                    color: variables.$blue-color
         .lista_inativo:hover
             transform: translateY(-3px)
     .menuButton
@@ -82,19 +81,14 @@
                 a
                     @include mixins.responsivo-600
                         font-size: 0.7rem
-                .ativo
-                    letter-spacing: 4px
-                    text-shadow: 0px 0px 5px
-                    border-bottom: 2px solid variables.$blue-color
-                    
-@keyframes aparecer
+
+@keyframes rotate
     0%
-        letter-spacing: 2px
+        transform: rotate(0)
     100%
-        letter-spacing: 4px
+        transform: rotate(360deg)
 
 .settings
-    margin-right: 100px
     @include mixins.responsivo-600
         margin-right: 15px
     .settingsClose
