--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -4,6 +4,10 @@
     justify-content: center
     align-items: center
 
+@mixin responsivo-800
+    @media (max-width: 800px)
+        @content
+
 @mixin responsivo-600
     @media (max-width: 600px)
         @content
