Adicionando funcionalidades a barra de navegação.

--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -4,6 +4,7 @@
     
 .logo
     @include mixins.align-center(column)
+    padding: 10px 0 10px 0
     p
         font-family: variables.$font
         font-size: 1.4rem
