--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -7,3 +7,5 @@ $gray-color: rgb(100, 100, 100)
 $nav-color: rgb(240, 240, 240)
 $contato-color: rgb(255, 255, 255)
 $errorMessage-color: rgb(255, 255, 255)
+$red-color: rgb(255, 0, 0)
+$pink-color: rgb(224, 0, 168)
