--- a/styles/css/ContateMe.module.css
+++ b/styles/css/ContateMe.module.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-color: rgb(255, 255, 255);
 }
 .contato h2 {
   padding-bottom: 30px;
