--- a/styles/sass/ContateMe.module.sass
+++ b/styles/sass/ContateMe.module.sass
@@ -6,6 +6,7 @@
     padding-bottom: 50px
     @include mixins.align-center(column)
     text-align: center
+    background-color: variables.$contato-color
     h2
         padding-bottom: 30px
         font-size: 2rem
