--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -63,144 +63,146 @@
                     color: rgb(100, 100, 100)
         .lista_inativo:hover
             transform: translateY(-3px)
-    .menuButton
-        margin-left: 20px
-        margin-right: 20px
-        svg
-            @include mixins.responsivo-600
-                height: 20px
-                width: 20px
-        .menuClose
-            transition: transform 0.5s ease, color 0.5s ease
-        .menuOpen
-            transform: rotate(90deg)
-            color: variables.$blue-color
-            transition: transform 0.5s ease, color 0.5s ease
-    .menu
-        top: 90px
-        left: 50%
-        background-color: variables.$nav-color
-        border-radius: 15px
-        border: 2px solid black
-        animation: fade-in 0.5s ease-in-out
-        z-index: 10
-        position: absolute
-        @include mixins.responsivo-600
-            top: 50px
-            left: 60%
-        ul
-            @include mixins.align-center(column)
-            li
-                a
-                    @include mixins.responsivo-600
-                        font-size: 0.7rem
+    .containerMenu
+        position: relative
+        display: inline-block
+        .menuButton
+            margin-left: 20px
+            margin-right: 20px
+            svg
+                @include mixins.responsivo-600
+                    height: 20px
+                    width: 20px
+            .menuClose
+                transition: transform 0.5s ease, color 0.5s ease
+            .menuOpen
+                transform: rotate(90deg)
+                color: variables.$blue-color
+                transition: transform 0.5s ease, color 0.5s ease
+        .menu
+            background-color: variables.$nav-color
+            border-radius: 15px
+            border: 2px solid black
+            animation: fade-in 0.5s ease-in-out
+            z-index: 10
+            position: absolute
+            left: 0
+            top: 30px
+            ul
+                @include mixins.align-center(column)
+                li
+                    a
+                        @include mixins.responsivo-600
+                            font-size: 0.7rem
 
 @keyframes rotate
     0%
         transform: rotate(0)
     100%
         transform: rotate(360deg)
-
-.settings
-    svg
-        @include mixins.responsivo-600
-            height: 20px
-            width: 20px
-    .settingsClose
-        transition: transform 1s ease, color 1s ease
-    .settingsOpen
-        transform: rotate(180deg)
-        color: variables.$blue-color
-        transition: transform 1s ease, color 1s ease
-    
-.settingsMenu
-    @include mixins.align-center(column)
-    position: absolute
-    top: 90px
-    right: 50px
-    background-color: variables.$nav-color
-    border-radius: 15px
-    padding: 20px 20px 0 20px
-    border: 2px solid black
-    animation: fade-in 0.5s ease-in-out
-    z-index: 10
-    @include mixins.responsivo-600
-        right: 15px
-    .titulo
-        font-size: 1.2rem
-        font-weight: 600
-        @include mixins.responsivo-600
-            font-size: 1rem
-    ul
+.containerSettings
+    position: relative
+    display: inline-block
+    .settings
+        padding: 10px 25px
+        svg
+            @include mixins.responsivo-600
+                height: 20px
+                width: 20px
+        .settingsClose
+            transition: transform 1s ease, color 1s ease
+        .settingsOpen
+            transform: rotate(180deg)
+            color: variables.$blue-color
+            transition: transform 1s ease, color 1s ease
+        
+    .settingsMenu
         @include mixins.align-center(column)
-        padding: 0
-        padding-top: 20px
-        li
-            padding-bottom: 20px
-            @include mixins.align-center(row)
-            @include mixins.responsivo-350
-                padding-left: 10px
-                padding-right: 0
-            p
-                @include mixins.responsivo-600
-                    font-size: 0.7rem
-            label
-                position: relative
-                display: inline-block
-                width: 60px
-                height: 34px
-                input
-                    display: none
-                .slider
-                    position: absolute
-                    cursor: pointer
-                    top: 0
-                    left: 0
-                    right: 0
-                    bottom: 0
-                    background-color: #ccc
-                    -webkit-transition: .4s
-                    transition: .4s
-                    border-radius: 34px
-                    &:before
+        position: absolute
+        background-color: variables.$nav-color
+        border-radius: 15px
+        padding: 20px 20px 0 20px
+        border: 2px solid black
+        animation: fade-in 0.5s ease-in-out
+        z-index: 10
+        right: 10px
+        @include mixins.responsivo-600
+            right: 15px
+        .titulo
+            font-size: 1.2rem
+            font-weight: 600
+            @include mixins.responsivo-600
+                font-size: 1rem
+        ul
+            @include mixins.align-center(column)
+            padding: 0
+            padding-top: 20px
+            li
+                padding-bottom: 20px
+                @include mixins.align-center(row)
+                @include mixins.responsivo-350
+                    padding-left: 10px
+                    padding-right: 0
+                p
+                    @include mixins.responsivo-600
+                        font-size: 0.7rem
+                label
+                    position: relative
+                    display: inline-block
+                    width: 60px
+                    height: 34px
+                    input
+                        display: none
+                    .slider
                         position: absolute
-                        content: ""
-                        height: 26px
-                        width: 26px
-                        left: 4px
-                        bottom: 4px
-                        background-color: white
+                        cursor: pointer
+                        top: 0
+                        left: 0
+                        right: 0
+                        bottom: 0
+                        background-color: #ccc
                         -webkit-transition: .4s
                         transition: .4s
-                        border-radius: 50%
-                input
-                    &:checked + .slider
-                        background-color: #2196F3
-                    &:checked + .slider:before
-                        -webkit-transform: translateX(26px)
-                        -ms-transform: translateX(26px)
-                        transform: translateX(26px)
-            .lang
-                width: 100px
-                height: 40px
-                .slider
-                    &:before
-                        width: 46px
-                        height: 32px
                         border-radius: 34px
-                        background-image: url('/images/brasil.png')
-                        background-size: 47px 47px
-                        background-position-y: -5px
-                input
-                    &:checked + .slider
-                        background-color: #ccc
-                    &:checked + .slider:before
-                        -webkit-transform: translateX(46px)
-                        -ms-transform: translateX(46px)
-                        transform: translateX(46px)
-                        background-image: url('/images/eua.png')
-                        background-size: 47px 47px
-                        background-position-y: -5px
+                        &:before
+                            position: absolute
+                            content: ""
+                            height: 26px
+                            width: 26px
+                            left: 4px
+                            bottom: 4px
+                            background-color: white
+                            -webkit-transition: .4s
+                            transition: .4s
+                            border-radius: 50%
+                    input
+                        &:checked + .slider
+                            background-color: #2196F3
+                        &:checked + .slider:before
+                            -webkit-transform: translateX(26px)
+                            -ms-transform: translateX(26px)
+                            transform: translateX(26px)
+                .lang
+                    width: 100px
+                    height: 40px
+                    .slider
+                        &:before
+                            width: 46px
+                            height: 32px
+                            border-radius: 34px
+                            background-image: url('/images/brasil.png')
+                            background-size: 47px 47px
+                            background-position-y: -5px
+                    input
+                        &:checked + .slider
+                            background-color: #ccc
+                        &:checked + .slider:before
+                            -webkit-transform: translateX(46px)
+                            -ms-transform: translateX(46px)
+                            transform: translateX(46px)
+                            background-image: url('/images/eua.png')
+                            background-size: 47px 47px
+                            background-position-y: -5px
 
 @keyframes fade-in
     from
