--- a/styles/sass/Home.module.sass
+++ b/styles/sass/Home.module.sass
@@ -112,9 +112,12 @@
             justify-content: space-between
             @include mixins.responsivo-600
                 padding-top: 25px
-            a
-                text-decoration: none
-                color: rgb(75, 75, 75)
-            svg
-                height: 50px
-                width: 50px
+            li
+                a
+                    text-decoration: none
+                    color: rgb(75, 75, 75)
+                    &:hover
+                        color: black
+                    svg
+                        height: 50px
+                        width: 50px
